cabal-version: 3.0
name:          yampa-vty
version:       0.2.0.0
license:       ISC
license-file:  LICENSE
copyright:     Kevin Mullins 2022
maintainer:    kevin@pnotequalnp.com
author:        Kevin Mullins
tested-with:   ghc ==8.10.7 || ==9.2.1
homepage:      https://github.com/pnotequalnp/yampa-vty
bug-reports:   https://github.com/pnotequalnp/yampa-vty/issues
synopsis:      Vty Adapter for Yampa
description:
    Terminal graphics backend for AFRP with Yampa via the Vty library

category:      FRP, Graphics

source-repository head
    type:     git
    location: https://github.com/pnotequalnp/yampa-vty

library
    exposed-modules:    FRP.Yampa.Vty
    hs-source-dirs:     src
    default-language:   Haskell2010
    default-extensions:
        BlockArguments ImportQualifiedPost NamedFieldPuns NumDecimals
        TupleSections

    ghc-options:        -Wall -Wcompat -Werror=incomplete-patterns
    build-depends:
        base >=4.14 && <5.0,
        clock ^>=0.8.3,
        vty ^>=5.33,
        Yampa ^>=0.13.3
